--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                      </div>
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button  class="btn btn-default"><i class="fas fa-minus"></i></button>
+                           <button  id="fa_minus" class="btn btn-default"><i class="fas fa-minus"></i></button>
                            <input id="input_Number" type="number" min="0" class="form-control text-center" value="1">
                            <button id="fa_plus" class="btn btn-default"><i class="fas fa-plus"></i></button>
 
