--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input type="number" min="0" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button id="phone_decrease" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                           <input id="phone_input" type="number" min="0" class="form-control text-center" value="1">
+                           <button id="phone_increase" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
-                        <h5>$1219</h5>
+                        <h5>$<span id="phone_price">1219</span></h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -46,11 +46,11 @@
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
                            <button  id="fa_minus" class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input id="input_Number" type="number" min="0" class="form-control text-center" value="1">
+                           <input id="case_input" type="number" min="0" class="form-control text-center" value="1">
                            <button id="fa_plus" class="btn btn-default"><i class="fas fa-plus"></i></button>
 
                         </div>
-                        <h5>$<span id="price">59</span></h5>
+                        <h5>$<span id="case_price">59</span></h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -66,9 +66,9 @@
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$1,278</h5>
-                        <h5>$0</h5>
-                        <h5>$1,278</h5>
+                        <h5>$<span id="sub_total">1,278</span></h5>
+                        <h5>$<span id="tax">0</span></h5>
+                        <h5>$<span id="grand_total">1,278</span></h5>
                      </div>
                   </div>
                </div>
